Fix for Issue https://github.com/appirio-tech/ap-lime-topcoder/issues/180 Badges Page  - Add a new section visible only to non logged in users

--- a/app/content/css/app.scss
+++ b/app/content/css/app.scss
@@ -98,7 +98,8 @@ button {
 // Common Sections
 .challenges .learn-section,
 .landing .learn-section,
-.learn .learn-section {
+.learn .learn-section,
+.badges .learn-section {
   background-color: #eee;
   padding: 0 15px 42px;
   text-align: center;
